--- a/app/src/main/res/layout/edit_weight.xml
+++ b/app/src/main/res/layout/edit_weight.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/background_color">
@@ -40,7 +39,8 @@
                 android:background="@color/cardview_shadow_end_color"
                 android:backgroundTint="@color/background_color"
                 android:backgroundTintMode="@color/background_color"
-                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
+                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
+                android:contentDescription="go back button" />
 
             <TextView
                 android:id="@+id/textView"
@@ -81,7 +81,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="1.0"
+                android:contentDescription="go next button" />
         </LinearLayout>
 
         <TextView
