--- a/app/src/main/res/layout/fragment_intro_page_3.xml
+++ b/app/src/main/res/layout/fragment_intro_page_3.xml
@@ -1,9 +1,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingTop="40dp"
     android:background="@color/background_color">
 
@@ -47,6 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:srcCompat="@drawable/weight" />
+        app:srcCompat="@drawable/weight"
+        android:contentDescription="Weight registration example" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
