--- a/app/src/main/res/layout/list_weeklyview.xml
+++ b/app/src/main/res/layout/list_weeklyview.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
