--- a/app/src/main/res/layout/quick_add_widget_4col.xml
+++ b/app/src/main/res/layout/quick_add_widget_4col.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_gravity="start"
             android:id="@+id/appwidget_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Quick add"
             android:textColor="@color/black"
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|center"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_refresh_black_24dp" />
+            android:src="@drawable/ic_refresh_black_24dp"
+            android:contentDescription="Refresh button" />
 
     </LinearLayout>
 
