--- a/app/src/main/res/layout/list_weight.xml
+++ b/app/src/main/res/layout/list_weight.xml
@@ -44,7 +44,9 @@
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:backgroundTint="@android:color/transparent"
-            android:src="@drawable/edit_btn" />
+            android:src="@drawable/edit_btn"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"/>
     </LinearLayout>
 
 
