Cleanup and refactor

--- a/app/src/main/res/layout/fragment_intro_page_0.xml
+++ b/app/src/main/res/layout/fragment_intro_page_0.xml
@@ -42,6 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/author_names"
+        android:textAlignment="center"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView"
