--- a/app/src/main/res/layout/profile_frag.xml
+++ b/app/src/main/res/layout/profile_frag.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.measurelet.Profile_frag"
+    tools:context="com.measurelet.profile.ProfileFrag"
     tools:layout_editor_absoluteY="81dp"
     android:layout_marginTop="10dp"
     android:paddingLeft="40dp"
