--- a/app/src/main/res/layout/reg_weight_frag.xml
+++ b/app/src/main/res/layout/reg_weight_frag.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.measurelet.Reg_weight_frag">
+    tools:context="com.measurelet.weight.WeightFrag">
 
 
     <com.github.mikephil.charting.charts.LineChart
