--- a/app/src/main/res/layout/edit_liquid.xml
+++ b/app/src/main/res/layout/edit_liquid.xml
@@ -219,7 +219,7 @@
                 android:id="@+id/amount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="numberDecimal" />
+                android:inputType="number" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
